Production ready changes
Too many changes to list individually:
- Updated handling of deleted listings.
- Too fast error posting handling fixed and updated the timeout values for successful repost
- Remove declarative content - not needed anymore

--- a/manifest.backup.json
+++ b/manifest.backup.json
@@ -22,10 +22,11 @@
     "default_popup": "popup.html"
   },
  "permissions": [
+  "declarativeContent",
   "tabs",
 	"activeTab",
   "storage",
-	"http://*.craigslist.org/*",
-  "https://*.craigslist.org/*"
+	"http://*/*",
+    "https://*/*"
   ]
 }
