--- a/deployment/manifest.json
+++ b/deployment/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Craigslist Helper",
-  "version": "1.0",
-  "description": "Craigslist helper",
+  "name": "Craigslist Helper - Relister",
+  "version": "2.1",
+  "description": "Chrome extension that helps repost expired Craigslist listing in bulk",
   "background": {
    "scripts": ["background.js"],
    "persistent": true
@@ -17,16 +17,15 @@
    ],
   "browser_action": {
     "default_icon": "icon.png",
-    "name": "Craigslist helper",
-    "default_title": "Craigslist Helper",
+    "name": "Craigslist helper - Relister",
+    "default_title": "Craigslist Helper - Relister",
     "default_popup": "popup.html"
   },
  "permissions": [
-  "declarativeContent",
   "tabs",
 	"activeTab",
   "storage",
-	"http://*/*",
-    "https://*/*"
+	"http://*.craigslist.org/*",
+  "https://*.craigslist.org/*"
   ]
 }
